--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   api:
     build: .
     volumes:
-      - .:/root/app:cached
+      - .:/app:cached
       - ~/.ssh:/root/.ssh
       - ~/.bash_history:/root/.bash_history
     ports:
@@ -14,7 +14,6 @@ services:
     environment: &api-environment
       DJANGO_ENV: dev
       DJANGO_SECRET_KEY: secret_key
-
       DATABASE_NAME: postgres
       DATABASE_USER: postgres
       DATABASE_PASSWORD: postgres
