--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["dbp"]
 python = "^3.9"
 Django = "^4.1.5"
 psycopg2-binary = "^2.9.5"
+black = "^23.1.0"
 
 [tool.poetry.dev-dependencies]
 
